# blocksense-infra-test

./: .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .prettierignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  Justfile  README.md  flake.nix  package.json  test.nix  tsconfig.base.json
apps/cli/: Cargo.toml  README.md
apps/cli/src/: build_info.rs  lib.rs  opts.rs  spin_manifest.rs
apps/cli/src/commands/: build.rs  dev.rs  node.rs  oracle.rs
apps/cli/test/: .gitignore  blocksense-config.json  cmc_oracle.wasm  revolut_oracle.wasm  yahoo_oracle.wasm
apps/oracles/crypto-price-feeds/: Cargo.toml  spin.toml
apps/oracles/crypto-price-feeds/src/: binance.rs  binance_us.rs  bitfinex.rs  bitget.rs  bybit.rs  coinbase.rs  common.rs  crypto_com_exchange.rs  fetch_prices.rs  gate_io.rs  gemini.rs  http.rs  kraken.rs  kucoin.rs  lib.rs  mexc.rs  okx.rs  symbols_cache.rs  upbit.rs  vwap.rs
apps/oracles/crypto-price-feeds/src/exchanges/: binance.rs  binance_us.rs  bitfinex.rs  bitget.rs  bybit.rs  coinbase.rs  crypto_com_exchange.rs  gate_io.rs  gemini.rs  kraken.rs  kucoin.rs  mexc.rs  mod.rs  okx.rs  upbit.rs
apps/oracles/crypto-price-feeds/src/traits/: mod.rs  prices_fetcher.rs
apps/oracles/eth-rpc/: Cargo.toml  spin.toml
apps/oracles/eth-rpc/src/: lib.rs
apps/oracles/eth-rpc/src/abi/: YnETHx.json
apps/oracles/exsat-holdings/: Cargo.toml  spin.toml
apps/oracles/exsat-holdings/src/: data.rs  lib.rs
apps/oracles/gecko-terminal/: Cargo.toml  spin.toml
apps/oracles/gecko-terminal/src/: lib.rs
apps/reporter/: CMC_API_KEY  Cargo.toml  YH_FINANCE_API_KEY  reporter_config.json
apps/sequencer/: Cargo.toml  README.md  sequencer_config.json
apps/sequencer/docker/kafka_server/: Dockerfile  entrypoint.sh
apps/sequencer/src/: aggregate_batch_consensus_processor.rs  block_creator.rs  blocks_reader.rs  config.rs  lib.rs  main.rs  metrics_collector.rs  plugin_registry.rs  sequencer_state.rs
apps/sequencer/src/config/: config.rs
apps/sequencer/src/feeds/: average_feed_processor.rs  block_creator.rs  consensus_second_round_manager.rs  feed_allocator.rs  feed_config_conversions.rs  feed_slots_manager.rs  feed_slots_processor.rs  feed_workers.rs  feeds_processing.rs  feeds_registry.rs  feeds_slots_manager.rs  feeds_state.rs  mod.rs  votes_result_batcher.rs  votes_result_sender.rs
apps/sequencer/src/http_handlers/: admin.rs  data_feeds.rs  http_handlers.rs  mod.rs  registry.rs
apps/sequencer/src/metrics_collector/: metrics_collector.rs
apps/sequencer/src/providers/: adfs_gen_calldata.rs  eth_send_utils.rs  mod.rs  multicall.rs  provider.rs  provider_metrics.rs
apps/sequencer/src/reporters/: mod.rs  reporter.rs  reporter_metrics.rs
apps/sequencer/src/testing/: mod.rs  sequencer_state.rs
apps/sequencer/src/utils/: byte_utils.rs  eth_send_to_contract.rs  eth_send_utils.rs  logging.rs  mod.rs  provider.rs  time_utils.rs
apps/sequencer/tests/: sequencer_config.json  test_plugin_registry.rs
apps/sequencer_tests/: Cargo.toml
apps/trigger-oracle/: Cargo.toml  README.md
apps/trigger-oracle/src/: custom_serde.rs  lib.rs  main.rs
libs/anomaly_detection/: Cargo.toml
libs/anomaly_detection/src/: extended_isolation_forest.rs  hdbscan_detector.rs  ingest.rs  lib.rs
libs/blockchain_data_model/: Cargo.toml
libs/blockchain_data_model/src/: in_mem_db.rs  lib.rs
libs/cli/: Cargo.toml  README.md
libs/cli/src/: commands.rs  lib.rs  opts.rs  spin_manifest.rs
libs/cli/src/commands/: build.rs  node.rs
libs/cli/test/: .gitignore  blocksense-config.json  cmc_oracle.wasm  revolut-example.wasm  revolut_oracle.wasm  test-config.json  yahoo_oracle.wasm
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/data_feeds/: Cargo.toml
libs/data_feeds/src/: feeds_processing.rs  generate_signature.rs  lib.rs  orchestrator.rs  types.rs  utils.rs
libs/data_feeds/src/connector/: bytes.rs  data_feed.rs  dispatch.rs  error.rs  historical.rs  mod.rs  payload.rs  post.rs
libs/data_feeds/src/interfaces/: api_connect.rs  data_feed.rs  historical.rs  mod.rs  payload.rs
libs/data_feeds/src/services/: aggregate.rs  coinmarketcap.rs  common.rs  data_registry.rs  mod.rs  yahoo_finance.rs
libs/derive/: Cargo.toml
libs/derive/src/: api_connect.rs  historical.rs  lib.rs
libs/feed_registry/: Cargo.toml  feeds_config.json
libs/feed_registry/src/: aggregate.rs  api.rs  feed_registration_cmds.rs  lib.rs  registry.rs  traits.rs  types.rs
libs/feeds_processing/: Cargo.toml
libs/feeds_processing/src/: adfs_gen_calldata.rs  lib.rs  utils.rs
libs/gnosis_safe/: Cargo.toml  safe_abi.json
libs/gnosis_safe/src/: data_types.rs  lib.rs  utils.rs
libs/metrics/: Cargo.toml
libs/metrics/src/: actix_server.rs  lib.rs  metrics.rs  metrics_collector.rs  registry.rs
libs/prometheus/: Cargo.toml
libs/prometheus/src/: actix_server.rs  lib.rs  metrics.rs  metrics_collector.rs
libs/registry/: Cargo.toml
libs/registry/src/: config.rs  registry.rs
libs/sdk/: Cargo.toml  README.md  build-and-install-plugin.sh
libs/sdk/examples/cmc/: spin.toml
libs/sdk/examples/cmc/src/: lib.rs
libs/sdk/examples/crypto-price-feeds/: Cargo.toml
libs/sdk/examples/crypto-price-feeds/src/: coinbase.rs  kraken.rs  lib.rs
libs/sdk/examples/exsat_network/: Cargo.toml  spin.toml
libs/sdk/examples/exsat_network/src/: lib.rs
libs/sdk/examples/revolut/: spin.toml
libs/sdk/examples/revolut-example/: Cargo.toml  spin.toml
libs/sdk/examples/revolut-example/src/: lib.rs
libs/sdk/examples/yahoo/: spin.toml
libs/sdk/macro/: Cargo.toml
libs/sdk/macro/src/: lib.rs
libs/sdk/oracles/: .gitignore
libs/sdk/src/: http.rs  lib.rs  oracle.rs  price_pair.rs
libs/sdk/trigger-oracle/: .gitignore  Cargo.toml  spin-pluginify.toml
libs/sdk/trigger-oracle/src/: lib.rs
libs/sdk/wit/: blocksense-oracle.wit
libs/sequencer-types/: Cargo.toml
libs/sequencer-types/src/: sequencer.rs
libs/sequencer_config/: Cargo.toml
libs/sequencer_config/src/: lib.rs
libs/utils/: Cargo.toml  build.rs
libs/utils/src/: build_info.rs  constants.rs  lib.rs  logging.rs  test_env.rs  time.rs
(+1377 files in other folders)
