[package]
name = "reporter"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_feeds = { path = "../../libs/data_feeds"}
prometheus = { path = "../../libs/prometheus" }
utils = { path = "../../libs/utils" }
config = { path = "../../libs/config" }
feed_registry = { path = "../../libs/feed_registry"}

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
serde_json = "1.0.137"

[[bin]]
name = "launch_reporter"
path = "bin/launch_reporter.rs"

[[bin]]
name = "launch_prometheus_server"
path = "bin/prometheus_server.rs"
