[package]
name = "sequencer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
data_feeds = { path = "../../libs/data_feeds" }
feeds_processing = { path = "../../libs/feeds_processing"}
anomaly_detection = { path = "../../libs/anomaly_detection" }
config = { path = "../../libs/config" }
blocksense-registry = { path = "../../libs/registry" }
crypto = { path = "../../libs/crypto" }
utils = { workspace = true }
feed_registry = { path = "../../libs/feed_registry" }
blockchain_data_model = { path = "../../libs/blockchain_data_model" }

alloy = { version = "0.8", features = [
    "sol-types",
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "transports",
    "transport-http",
    "transport-ipc",
    "transport-ws",
    "pubsub",
] }

alloy-primitives = "0.8.19"

prometheus = { path = "../../libs/prometheus" }
gnosis_safe = { path = "../../libs/gnosis_safe" }

reqwest = { workspace = true }
# async
tokio = { workspace = true }
chrono = { workspace = true }

# misc
eyre = "0.6.12"
actix-web = "4.6.0"
actix-multipart = "0.7.2"
actix-test = "0.1.5"
serde_json = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
envload = "0.1.1"
once_cell = "1.20.2"
async-channel = "2.3.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = "1.9.0"
futures-util = "0.3.30"
rand = "0.8.5"
paste = "1.0.15"
regex = "1.11.0"
tempfile = "3.13.0"
time = "0.3.36"
conv = "0.3.3"
uuid = { version = "1.12.1", features = ["v4"] }
ringbuf = "0.4.7"
console-subscriber = "0.4.0"
rdkafka = { version = "0.37.0", features = ["dynamic-linking"] }
tokio-stream = "0.1.16"
alloy-encode-packed = "0.1.1"

[[bin]]
name = "sequencer"
path = "bin/sequencer_runner.rs"
