[package]
name = "sequencer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
data_feeds = { workspace = true }
feeds_processing = { workspace = true }
anomaly_detection = { workspace = true }
config = { workspace = true }
blocksense-registry = { workspace = true }
crypto = { workspace = true }
utils = { workspace = true }
feed_registry = { workspace = true }
blockchain_data_model = { workspace = true }

alloy = { workspace = true, features = [
    "sol-types",
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "transports",
    "transport-http",
    "transport-ipc",
    "transport-ws",
    "pubsub",
] }

alloy-primitives = { workspace = true }

blocksense-metrics = { workspace = true }
gnosis_safe = { workspace = true }

reqwest = { workspace = true }
# async
tokio = { workspace = true }
chrono = { workspace = true }

# misc
anyhow = { workspace = true }
eyre = { workspace = true }
actix-web = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
ringbuf = { workspace = true }
console-subscriber = { workspace = true }
rdkafka = { workspace = true, features = ["dynamic-linking"] }
tokio-stream = { workspace = true }

[dev-dependencies]
actix-test = { workspace = true }

[[bin]]
name = "sequencer"
path = "bin/sequencer_runner.rs"
