[package]
name = "sequencer_tests"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
data_feeds = { workspace = true }
utils = { workspace = true }
crypto = { workspace = true }
config = { workspace = true }
feed_registry = { workspace = true }

alloy = { workspace = true, features = ["sol-types", "contract", "network", "node-bindings", "providers", "rpc", "rpc-client", "rpc-types-eth", "rpc-types-trace", "signers", "signer-keystore", "signer-ledger", "signer-mnemonic", "signer-trezor", "signer-yubihsm", "transports", "transport-http", "transport-ipc", "transport-ws", "pubsub"] }

regex = { workspace = true }
reqwest = { workspace = true }
# async
tokio = { version = "1.4.0", features = ["full"] }

# misc
eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
url = { workspace = true }
port_scanner = { workspace = true }
curl = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }

[[bin]]
name = "sequencer_tests"
path = "bin/sequencer_tests.rs"
