[package]
name = "trigger-oracle"
authors = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { path = "../../libs/prometheus" }
data_feeds = { path = "../../libs/data_feeds"}
feed_registry = { path = "../../libs/feed_registry"}
crypto = { path = "../../libs/crypto"}
utils = { workspace = true }

anyhow = { workspace = true }
clap = { version = "3.1.15", features = ["derive", "env"] }
futures = { workspace = true }
is-terminal = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

spin-app = { git = "https://github.com/blocksense-network/spin", branch="blocksense"}
spin-core = { git = "https://github.com/blocksense-network/spin", branch="blocksense"}
spin-trigger = { git = "https://github.com/blocksense-network/spin", branch="blocksense"}
spin-outbound-networking = { git = "https://github.com/blocksense-network/spin", branch="blocksense"}
terminal = { git = "https://github.com/blocksense-network/spin", branch="blocksense"}
outbound-http = { git = "https://github.com/blocksense-network/spin", branch="blocksense"}

url = { workspace = true }
tokio = { workspace = true }
tokio-scoped = "0.2.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
http = "1.1.0"
hyper = "1.3.1"
wasmtime = "22.0.0"
wasmtime-wasi = "22.0.0"
wasmtime-wasi-http = "22.0.0"
