[package]
name = "trigger-oracle"
authors = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { workspace = true }
data_feeds = { workspace = true }
feed_registry = { workspace = true }
crypto = { workspace = true }
utils = { workspace = true }

anyhow = { workspace = true }
clap = { version = "3.1.15", features = ["derive", "env"] }
futures = { workspace = true }
is-terminal = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

spin-app = { workspace = true }
spin-core = { workspace = true }
spin-trigger = { workspace = true }
spin-outbound-networking = { workspace = true }
terminal = { workspace = true }
outbound-http = { workspace = true }

url = { workspace = true }
tokio = { workspace = true }
tokio-scoped = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
