[package]
name = "anomaly_detection"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "extended_isolation_forest_test"
path = "bin/extended_isolation_forest_test.rs"

[[bin]]
name = "hdbscan_detector_test"
path = "bin/hdbscan_detector_test.rs"

[dependencies]
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.216"
extended-isolation-forest = "0.2.3"
hdbscan = "0.9.0"
csv = "1.3.0"
anyhow = "1.0.89"
tracing = { version = "0.1.41", features = ["log"] }
