[package]
name = "anomaly_detection"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "extended_isolation_forest_test"
path = "bin/extended_isolation_forest_test.rs"

[[bin]]
name = "hdbscan_detector_test"
path = "bin/hdbscan_detector_test.rs"

[dependencies]
num = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
extended-isolation-forest = { workspace = true }
hdbscan = { workspace = true }
csv = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["log"] }
