[package]
name = "blockchain_data_model"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../../libs/utils" }
serde = { version = "1.0.210", features = ["derive", "serde_derive"]}
ssz_rs = "0.9.0"
hex-literal = "1.0.0"
hex = "0.4.3"
anyhow = "1.0.89"
tracing = { version = "0.1.40", features = ["async-await", "log"] }
