[package]
name = "blocksense-blockchain-data-model"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-utils = { workspace = true }
serde = { workspace = true, features = ["derive", "serde_derive"] }
ssz_rs = { workspace = true }
hex-literal = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
