[package]
name = "blocksense-cli"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
indexmap = { version = "1", features = ["serde"] }
camino = "1.1.7"
clap = { version = "4.5", features=["derive"] }
is-terminal = "0.4.12"
lazy_static = "1.4.0"
log = "0.4.21"
reqwest = { version = "0.12", features=["json"] }
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"

tokio = { version = "1.11", features = ["full"] }
toml = "0.8.13"
toml_edit = "0.22.13"
tracing = { version = "0.1.40" , features=["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
blocksense-registry = { path = "../registry" }
