[package]
name = "config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocksense-registry = { path = "../registry" }
utils = {path = "../utils"}
dirs = "6.0.0"
serde = { version = "1.0.216", features = ["derive"]}
anyhow = "1.0.89"
serde_json = "1.0.137"
hex = "0.4.3"
tracing = { version = "0.1.41", features = ["log"] }
