[package]
name = "config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocksense-registry = { workspace = true }
utils = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true, features = ["log"] }
