[package]
name = "feed_registry"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crypto = { path = "../crypto" }
config = { path = "../config" }
utils = { path = "../utils" }

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tracing = { version = "0.1.41", features = ["async-await", "log"] }
ringbuf = "0.4.7"
tokio = { version = "1.4.0", features = ["full"] }
num = { version = "0.4.3", features = ["serde"] }
futures = "0.3.31"
anyhow = "1.0.89"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
