[package]
name = "feed_registry"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crypto = { workspace = true }
config = { workspace = true }
utils = { workspace = true }
blocksense-registry = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
ringbuf = { workspace = true }
tokio = { workspace = true }
num = { workspace = true, features = ["serde"] }
futures = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
chrono = { workspace = true }
